2008-02-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, ext/oci8/stmt.c:
	    change from:
	      switch (fixnum_value) {
	      case INT2FIX(INT_CONSTANT):
	        ....;
	    to:
	      switch (FIX2INT(fixnum_value)) {
	      case INT_CONSTANT:
	        ....;
	    "case INT2FIX(INT_CONSTANT)" confuses astyle.
	    astyle's URL: http://astyle.sourceforge.net
	* test/config.rb: sleep 5 seconds and retry again when
	    ORA-12516 or ORA-12520. One second was too short on
	    my new linux box.
	* test/test_oci8.rb: fix a test case for x86_64 linux.

2008-01-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: add checking code for intern.h, util.h,
	    ruby/util.h, ruby_errinfo and rb_errinfo.
	* ext/oci8/env.c: define a header file to be included by
	    HAVE_RUBY_UTIL_H and HAVE_UTIL_H, not by RUBY_VM.
	* ext/oci8/oci8.h: define a header file to be included by
	    HAVE_INTERN_H, not by RUBY_VM. use HAVE_RB_ERRINFO and
	    HAVE_RUBY_ERRINFO to define rb_errinfo() as a macro.
	* ext/oci8/oci8.c: use rb_eval_string() instead of rb_reg_new()
	    for not to use RUBY_VM.

2008-01-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h ext/oci8/oci8lib.c: rename variable name
	    cOCIHandle to oci8_cOCIHandle to use outside of oci8lib.c.
	* ext/oci8/metadata.c: use oci8_cOCIHandle instead of rb_cObject
	    to hold a descrbe handle. check parent object's handle type
	    in oci8_metadata_create().

2008-01-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl: fix a bug on runtime-api check.
	* ext/oci8/ocidatetime.c, test/test_datetime.rb: use
	    DateTime.parse('0001-01-01 00:00:00.1') instead of 
	    DateTime.parse('00:00:00.1'). The latter doesn't work
	    on ruby 1.8.5 or earlier.
	* test/config.rb: revert the previous commit and add
	    get_oci8_connection() and get_dbi_connection() to the
	    base class of test cases. When an attempt to connect fails
	    by ORA-12516 or ORA-12520, their methods sleep one seconds